--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,4 @@
 [versions]
+core = "0.2.0"
 kord = "0.13.1"
 lavaplayer = "1.3.77"
-gson = "2.10.1"
-enhancedeventbus = "1.2.0"
-okhttp = "4.10.0"
-sqlitejdbc = "3.36.0.3"
-exposed = "0.41.1"
-slf4j = "2.0.5"
-log4j = "2.20.0"
